# lora-rs

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS
device/: CHANGELOG.md  Cargo.toml  README.md  jlink.gdb  openocd.gdb
device/.cargo/: config
device/examples/stm32l0x2/: bindings.rs  main.rs
device/src/: lib.rs  mac.rs  radio.rs  rng.rs  test_util.rs  types.rs  us915.rs
device/src/async_device/: lora_radio.rs  mod.rs  radio.rs
device/src/async_device/test/: mod.rs  radio.rs  timer.rs  util.rs
device/src/mac/: mod.rs  otaa.rs  session.rs  types.rs  uplink.rs
device/src/nb_device/: mod.rs  session.rs  state.rs
device/src/nb_device/test/: mod.rs  util.rs
device/src/radio/: mod.rs  types.rs
device/src/region/: constants.rs  eu868.rs  mod.rs  us915.rs
device/src/region/as923/: datarates.rs  mod.rs
device/src/region/au915/: datarates.rs  frequencies.rs  mod.rs
device/src/region/cn470/: datarates.rs  frequencies.rs  mod.rs
device/src/region/dynamic_channel_plans/: as923.rs  eu433.rs  eu868.rs  in865.rs  mod.rs
device/src/region/eu433/: datarates.rs  mod.rs
device/src/region/eu868/: datarates.rs  mod.rs
device/src/region/fixed_channel_plans/: join_bias.rs  join_channels.rs  mod.rs
device/src/region/fixed_channel_plans/au915/: datarates.rs  mod.rs
device/src/region/fixed_channel_plans/us915/: datarates.rs  mod.rs
device/src/region/in865/: datarates.rs  mod.rs
device/src/region/us915/: datarates.rs  frequencies.rs  mod.rs
device/src/state_machines/: mod.rs  no_session.rs  session.rs
device/src/state_machines/test/: util.rs
encoding/: CHANGELOG.md  Cargo.toml  README.md
encoding/benches/: lorawan.rs
encoding/src/: creator.rs  default_crypto.rs  keys.rs  lib.rs  maccommandcreator.rs  maccommands.rs  parser.rs  securityhelpers.rs
encoding/src/extra/: to_string.rs
encoding/tests/: lorawan.rs  maccommandcreator.rs  maccommands.rs
encoding/trallocator/: Cargo.toml
encoding/trallocator/src/: lib.rs
examples/esp32/esp32_RFM95/: Cargo.toml  README.md  build.rs
examples/esp32/esp32_RFM95/.cargo/: config.toml
examples/esp32/esp32_RFM95/src/: iv.rs
examples/esp32/esp32s3_Heltec_WiFi_LoRa_ESP32/: Cargo.toml
examples/esp32/esp32s3_Heltec_WiFi_LoRa_ESP32/.cargo/: config.toml
examples/nrf52840/: Cargo.toml  build.rs
examples/rp/: Cargo.toml
examples/stm32l0/: Cargo.toml
examples/stm32l0/.cargo/: config.toml
examples/stm32wba/: Cargo.toml  README.md  build.rs  memory.x
examples/stm32wba/.cargo/: config.toml
examples/stm32wba/src/: iv.rs  lr1110_firmware_0401.rs
examples/stm32wl/: Cargo.toml  README.md  build.rs
examples/stm32wl/src/: iv.rs
examples/stm32wle5cx/: Cargo.toml  README.md
examples/stm32wle5cx/.cargo/: config.toml
examples/stm32wle5cx/src/: iv.rs
lora/: Cargo.toml
lora-modulation/: CHANGELOG.md  Cargo.toml  README.md
lora-modulation/src/: lib.rs  lora_phy.rs
lora-phy/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
lora-phy/src/: interface.rs  iv.rs  lib.rs  lorawan_radio.rs  lr1110_interface.rs  mod_params.rs  mod_traits.rs
lora-phy/src/lr1110/: mod.rs  radio_kind_params.rs  variant.rs
lora-phy/src/sx1261_2/: mod.rs  radio_kind_params.rs
lora-phy/src/sx126x/: mod.rs  radio_kind_params.rs  variant.rs
lora-phy/src/sx126x/test/: fixtures.rs  mod.rs
lora-phy/src/sx1276_7_8_9/: mod.rs  radio_kind_params.rs
lora-phy/src/sx127x/: mod.rs  radio_kind_params.rs  sx1272.rs  sx1276.rs
lora/src/: board_specific.rs  interface.rs  lib.rs  mod_params.rs  mod_traits.rs  subroutine.rs
lora/src/capabilities/: mod.rs
lora/src/sx1261_2/: mod.rs  radio_kind_params.rs
lora/src/sx1276_7_8_9/: mod.rs  radio_kind_params.rs
lorawan-device/: CHANGELOG.md  Cargo.toml  README.md
lorawan-device/src/: fmt.rs  lib.rs  log.rs  radio.rs  rng.rs  test_util.rs
lorawan-device/src/async_device/: embassy_time.rs  lora_radio.rs  mod.rs  radio.rs
lorawan-device/src/async_device/test/: certification.rs  class_c.rs  maccommands.rs  mod.rs  multicast.rs  radio.rs  timer.rs  util.rs
lorawan-device/src/async_device/test/certification/: dlchannelreq_eu868.rs  mac_common.rs  mac_priority.rs  mod.rs  newchannelreq_eu868.rs  oversized_payload_eu868.rs  rxparamsetup_eu868.rs
lorawan-device/src/mac/: certification.rs  mod.rs  multicast.rs  otaa.rs  session.rs  uplink.rs
lorawan-device/src/mac/uplink/: mod.rs  serde.rs
lorawan-device/src/nb_device/: mod.rs  radio.rs  state.rs
lorawan-device/src/nb_device/test/: mod.rs  util.rs
lorawan-device/src/region/: constants.rs  mod.rs
lorawan-device/src/region/dynamic_channel_plans/: as923.rs  eu433.rs  eu868.rs  in865.rs  mod.rs
lorawan-device/src/region/fixed_channel_plans/: join_channels.rs  mod.rs
lorawan-device/src/region/fixed_channel_plans/au915/: datarates.rs  frequencies.rs  mod.rs
lorawan-device/src/region/fixed_channel_plans/us915/: datarates.rs  frequencies.rs  mod.rs
lorawan-encoding/: CHANGELOG.md  Cargo.toml  README.md
lorawan-encoding/benches/: README.md  lorawan.rs
lorawan-encoding/src/: certification.rs  creator.rs  default_crypto.rs  keys.rs  lib.rs  maccommandcreator.rs  maccommands.rs  macros.rs  multicast.rs  packet_length.rs  parser.rs  securityhelpers.rs  string.rs  types.rs
lorawan-encoding/src/extra/: hasher.rs  mod.rs  string.rs  to_string.rs
lorawan-encoding/src/multicast/: group_setup.rs  group_status.rs  mod.rs
lorawan-encoding/src/protocol/: certification.rs  mod.rs
lorawan-encoding/tests/: certification.rs  lorawan.rs  maccommandcreator.rs  maccommands.rs  macros.rs  packet_length.rs
lorawan-macros/: Cargo.toml
lorawan-macros/src/: lib.rs
modulation/: CHANGELOG.md  Cargo.toml  README.md
modulation/src/: lib.rs
smtc-modem-cores/: Cargo.toml  README.md
smtc-modem-cores/smtc-modem-cores-sys/: CMakeLists.txt  Cargo.toml  build.rs
smtc-modem-cores/smtc-modem-cores-sys/src/: lib.rs
smtc-modem-cores/src/: lib.rs  sx126x.rs
src/: cmac.rs  (+12 more)
(+16 files in other folders)
