[workspace]
members = [
    "lorawan-device",
    "lorawan-encoding",
    "lorawan-macros",
    "lora-modulation",
    "lora-phy",
]
exclude = [
    "examples/nrf52840",
    "examples/rp",
    "examples/stm32l0",
    "examples/stm32wl",
]
resolver = "2"

[profile.dev]
opt-level = "s"

[profile.release]
debug = true
