[package]
name = "lorawan-device"
version = "0.11.0"
authors = ["Louis Thiery <thiery.louis@gmail.com>", "Ulf Lilleengen <lulf@redhat.com>"]
edition = "2021"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
license = "Apache-2.0"
readme = "README.md"
description = "A Rust LoRaWAN device stack implementation"
repository = "https://github.com/ivajloip/rust-lorawan"

[dependencies]
lora-modulation = { version = ">=0.1.2", default-features = false }
lorawan = { version = "0.7.4", path = "../encoding", default-features = false }
heapless = "0.7"
generic-array = "0.14.2"
defmt = { version = "0.3", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"], optional = true}
lora-phy = { version = ">=2.1.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync"]}
rand = { version = "0", features = ["getrandom"] }
lorawan = { version = "0.7.3", path = "../encoding", features = ["default-crypto"] }

[features]
defmt = ["dep:defmt", "lorawan/defmt", "lora-modulation/defmt"]
default = []
async = ["futures"]
serde = ["dep:serde", "lorawan/serde"]
external-lora-phy = ["dep:lora-phy"]
