[package]
name = "lorawan-encoding"
version = "0.6.2"
edition = "2018"
authors = ["Ivaylo Petrov <ivajloip@gmail.com>"]
description = "Crate lorawan provides structures and tools for reading and writing LoRaWAN messages from and to a slice of bytes."
repository = "https://github.com/ivajloip/rust-lorawan"
license = "MIT"
keywords = ["lorawan", "iot", "lpwan", "parser", "lightweight"]
readme = "README.md"

[dependencies]
aes = { version = "0.4.0", optional = true }
cmac = { version = "0.3.0", optional = true }
generic-array = "0.14.4"

[dev-dependencies]
criterion = "0.3"
trallocator = { path = "./trallocator" }

[[bench]]
name = "lorawan"
harness = false

[features]
default = ["full"]

full = ["with-to-string", "with-downlink", "default-crypto"]

default-crypto = ["aes", "cmac"]

with-to-string = []

with-downlink = []
