[package]
name = "lorawan"
version = "0.7.4"
edition = "2021"
authors = ["Ivaylo Petrov <ivajloip@gmail.com>"]
description = "Crate lorawan provides structures and tools for reading and writing LoRaWAN messages from and to a slice of bytes."
repository = "https://github.com/ivajloip/rust-lorawan"
license = "MIT"
keywords = ["lorawan", "iot", "lpwan", "parser", "lightweight"]
readme = "README.md"

[dependencies]
aes = { version = "0.6.0", optional = true }
cmac = { version = "0.5.1", optional = true }
generic-array = "0.14"
defmt = { version = "0.3", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true}

[dev-dependencies]
criterion = "0"
trallocator = { path = "./trallocator" }

[[bench]]
name = "lorawan"
harness = false

[features]
default = ["full"]
full = ["with-to-string", "with-downlink", "default-crypto"]
default-crypto = ["aes", "cmac"]
with-to-string = []
with-downlink = []
serde = ["dep:serde"]
