[package]
name = "lora-modulation"
version = "0.1.5"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A definition of LoRa modulation characteristics with minimal external dependencies."
repository = "https://github.com/lora-rs/lora-rs"
keywords = ["lora", "iot", "lpwan"]

[dependencies]
defmt = { version = "0.3", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[features]
defmt-03 = ["dep:defmt"]
serde = ["dep:serde"]
