[package]
name = "lorawan-device"
version = "0.12.1"
authors = ["Louis Thiery <thiery.louis@gmail.com>", "Ulf Lilleengen <lulf@redhat.com>"]
edition = "2021"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
license = "MIT"
readme = "README.md"
description = "A Rust LoRaWAN device stack implementation"
repository = "https://github.com/lora-rs/lora-rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lora-modulation = { path = "../lora-modulation", version = ">=0.1.2", default-features = false }
lorawan = { path = "../lorawan-encoding", version = "0.8", default-features = false }
heapless = "0.7"
generic-array = "0.14"
defmt = { version = "0.3", optional = true }
fastrand = { version = "2", default-features = false }
futures = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
seq-macro = "0.3.5"
document-features = "0.2.7"
embassy-time = { version = "0.3.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync"]}
rand = { version = "0", features = ["getrandom"] }
lazy_static = "1"
lorawan = { version = "0.8", path = "../lorawan-encoding" }

[features]
default = ["all-regions"]
all-regions = ["region-as923-1", "region-as923-2", "region-as923-3", "region-as923-4", "region-au915", "region-eu433", "region-eu868", "region-in865", "region-us915"]
region-as923-1 = []
region-as923-2 = []
region-as923-3 = []
region-as923-4 = []
region-au915 = []
region-eu433 = []
region-eu868 = []
region-in865 = []
region-us915 = []

## Provide an `async_device::Timer` impl based on `embassy-time`.
embassy-time = ["dep:embassy-time"]

## Use [`defmt`](https://docs.rs/defmt/latest/defmt/) for logging.
defmt = ["dep:defmt", "lorawan/defmt", "lora-modulation/defmt"]

## Enable [`serde`](https://docs.rs/serde/latest/serde/) serialization/deserialization for data structures.
serde = ["dep:serde", "lorawan/serde"]

default-crypto = ["lorawan/default-crypto"]
