[package]
name = "lorawan"
version = "0.9.0"
edition = "2021"
authors = ["Ivaylo Petrov <ivajloip@gmail.com>"]
description = "Crate lorawan provides structures and tools for reading and writing LoRaWAN messages from and to a slice of bytes."
repository = "https://github.com/lora-rs/lora-rs"
license = "MIT"
keywords = ["lorawan", "iot", "lpwan", "parser", "lightweight"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aes = { version = "0.9.0-pre.2", optional = true }
cmac = { version = "0.8.0-pre.2", optional = true }
hex = { version = "0", default-features = false }
defmt = { version = "0.3", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true}
hybrid-array = { version = "0.2.0-pre.10" }

[dev-dependencies]
criterion = "0"
heapless = "0"
trallocator = "0.2.1"

[[bench]]
name = "lorawan"
harness = false

[features]
default = ["full"]
full = ["with-to-string", "default-crypto", "serde", "defmt"]
default-crypto = ["aes", "cmac"]
with-to-string = []
serde = ["dep:serde"]
defmt = ["dep:defmt"]
