[package]
name = "lorawan-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A collection of macros to generate common code for LoRaWAN mac command parsers."
repository = "https://github.com/lora-rs/lora-rs"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1"

# For "println" debugging via eprintln!("{:?}", ...);
#syn = { version = "2.0", features = ["extra-traits"] }
