[package]
name = "smtc-modem-cores"
version = "0.1.3"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
license = "Apache 2.0"
readme = "README.md"
description = "Rust Wrapper SX12xx"

[dependencies]
smtc-modem-cores-sys = { path = "smtc-modem-cores-sys", version = "0.1.0" }
libm = "0.1.4"
heapless = "0.5.4"
as-slice = "*"
thiserror = "1"
embedded-hal = "1"

