[package]
edition = "2021"
name = "lora-rp-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.3.3", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.4.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

lora-phy = { path = "../../lora-phy" }
lorawan-device = { path = "../../lorawan-device", default-features = false, features = ["async", "external-lora-phy", "embassy-time", "defmt"] }
lorawan = { path = "../../lorawan-encoding", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal-bus = { version = "0.1.0-rc.2", features = ["async"]}

static_cell = { version = "2.0.0" }
portable-atomic = { version = "1.5", features = ["critical-section"] } # needed for static_cell on thumbv6

[profile.release]
debug = 2

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46bce329efe7921386dd46a493f607453bd8" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46bce329efe7921386dd46a493f607453bd8" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46bce329efe7921386dd46a493f607453bd8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46bce329efe7921386dd46a493f607453bd8" }