[package]
edition = "2021"
name = "lora-rp-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

lora-phy = { path = "../../lora-phy", features = ["lorawan-radio"] }
lorawan-device = { path = "../../lorawan-device", default-features = false, features = ["embassy-time", "default-crypto", "defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"]}

static_cell = { version = "2.0.0" }
portable-atomic = { version = "1.5", features = ["critical-section"] } # needed for static_cell on thumbv6

[profile.release]
debug = 2

