[package]
edition = "2021"
name = "lora-stm32l0-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32l072cz to your chip name, if necessary. Also change it in .cargo/config.toml
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32l072cz",
    "time-driver-any",
    "exti",
    "memory-x",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

lora-phy = { path = "../../lora-phy", features = ["lorawan-radio", "defmt-03"] }
lorawan-device = { path = "../../lorawan-device", features = [
    "embassy-time",
    "defmt-03",
] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
portable-atomic = { version = "1.10.0", features = [
    "unsafe-assume-single-core",
] }
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

[profile.release]
debug = 2
