[package]
edition = "2021"
name = "lora-stm32wba-lr1110-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# STM32WBA65RI with LR1110 external radio
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32wba52cg",  # Using WBA52 as base (WBA65 not yet in embassy)
    "time-driver-any",
    "memory-x",
    "unstable-pac",
    "exti",
    "chrono",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-futures = { version = "0", features = ["defmt"] }

lora-phy = { path = "../../lora-phy", features = ["lorawan-radio", "defmt-03"] }
lorawan-device = { path = "../../lorawan-device", features = [
    "embassy-time",
    "defmt-03",
] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

[profile.release]
debug = 2
