[package]
edition = "2024"
name = "lora-stm32wba-lr1110-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
# Run ranging demo as Manager (initiator). Without this feature, runs as Subordinate (responder).
manager = []

[dependencies]
# STM32WBA65RI with LR1110 external radio
embassy-stm32 = { version = "0.5.0", features = [
    "defmt",
    "stm32wba65ri",
    "time-driver-any",
    "memory-x",
    "exti",
] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

lora-phy = { path = "../../lora-phy", features = ["lorawan-radio", "defmt-03"] }
lorawan-device = { path = "../../lorawan-device", features = [
    "embassy-time",
    "defmt-03",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"

[profile.release]
debug = 2
