[package]
edition = "2021"
name = "lora-stm32wl-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32wle5jc to your chip name, if necessary. Also update .cargo/config.toml
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32wle5jc", "time-driver-any", "memory-x", "unstable-pac", "exti", "chrono"] }
embassy-executor = { version = "0.3.3", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.4.0", features = ["defmt"] }

lora-phy = { path = "../../lora-phy" }
lorawan-device = { path = "../../lorawan-device", default-features = false, features = ["async", "external-lora-phy", "embassy-time", "defmt"] }
lorawan = { path = "../../lorawan-encoding", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0.0-rc.2" }
embedded-hal-async = { version = "1.0.0-rc.2" }
embedded-hal-bus = { version = "0.1.0-rc.2", features = ["async"]}

[profile.release]
debug = 2

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
